--- a/RepResearch1.Rmd
+++ b/RepResearch1.Rmd
@@ -43,7 +43,7 @@ mean(StepsTotal$steps)
 median(StepsTotal$steps)
 ```
 
-The second approach is to make a Dataframe first with the values that I need. I create a data frame with the days and the total of steps by day
+The second approach is to make a Dataframe first with the values that I need. I create a data frame with the days and the total of steps by day. 
 
 ```{r}
 steps <- rep(NA, 61)
@@ -82,7 +82,7 @@ hist(df$steps, main = "Total steps by day", xlab = "day", col = "green")
 
 Make a time series plot (i.e. type = "l") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all days (y-axis)
 
-We get mean of steps and time series plot
+We get mean of steps and time series plot as follows:
 
 ```{r}
 time_series <- tapply(activity$steps, activity$interval, mean, na.rm = TRUE)
@@ -95,7 +95,7 @@ plot(row.names(time_series), time_series, type = "l", xlab = "5-min interval",
     col = "red")
 ```
 
-Which 5-minute interval, on average across all the days in the dataset, contains the maximum number of steps?
+Which 5-minute interval, on average across all the days in the dataset, contains the maximum number of steps? 
 
 ```{r}
 max_interval <- which.max(time_series)
@@ -104,7 +104,7 @@ names(max_interval)
 
 ###Imputing missing values
 
-Calculate and report the total number of missing values in the dataset (i.e. the total number of rows with NAs)
+Calculate and report the total number of missing values in the dataset (i.e. the total number of rows with NAs).
 
 ```{r}
 activity_NA <- sum(is.na(activity))
@@ -113,7 +113,7 @@ activity_NA
 
 Devise a strategy for filling in all of the missing values in the dataset. The strategy does not need to be sophisticated. For example, you could use the mean/median for that day, or the mean for that 5-minute interval,etc
 
-Fist Na replaced by mean in 5 min interval
+Fist Na  are replaced by mean in 5 min interval
 
 ```{r}
 StepsAverage <- aggregate(steps ~ interval, data = activity, FUN = mean)
