--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -167,7 +167,7 @@ After replacing the mean is the same but the median is a little bit different
 
 For this part the weekdays() function may be of some help here. Use the dataset with the filled-in missing values for this part.
 
-Create a new factor variable in the dataset with two levels – “weekday” and “weekend” indicating whether a given date is a weekday or weekend day.
+Create a new factor variable in the dataset with two levels â€“ â€œweekdayâ€ and â€œweekendâ€ indicating whether a given date is a weekday or weekend day.
 
 ```{r}
 day <- weekdays(activity$date)
